Fix word wrap of code block

--- a/src/.vuepress/theme/styles/code.styl
+++ b/src/.vuepress/theme/styles/code.styl
@@ -7,6 +7,7 @@
     background-color $dark
     border-radius 2px
     border 1px solid $gray
+    word-wrap break-word
     .token
       &.deleted
         color #EC5975
